# loss-of-plasticity

./: .gitignore  main.py  pyproject.toml
lop/algos/rl/: ppo.py
lop/rl/: run_ant_all.sh  run_ant_cbp.sh  run_metaworld_all.sh  run_metaworld_cbp.sh  run_ppo.py
lop/rl/cfg/metaworld/: faucet-close.yml  hammer.yml  handle-press-side.yml  peg-unplug-side.yml  push-back.yml  push-wall.yml  push.yml  shelf-place.yml  stick-pull.yml  window-close.yml
lop/rl/cfg/metaworld_cbp/: faucet-close.yml  hammer.yml  handle-press-side.yml  peg-unplug-side.yml  push-back.yml  push-wall.yml  push.yml  shelf-place.yml  stick-pull.yml  window-close.yml
lop/rl/plots/: analyze_metaworld_results.py
