[project]
name = "loss-of-plasticity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "free-mujoco-py==2.1.6",
    "gym==0.23.1",
    "matplotlib==3.7.2",
    "mlproj-manager==0.0.29",
    "numpy==1.24.1",
    "pycparser==2.21",
    "pyyaml==6.0.1",
    "scipy==1.11.2",
    "setuptools==44.0.0",
    "sympy==1.9",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "tqdm==4.66.1",
    "zipp==3.16.2",
]
